fix: message margin collapsing

--- a/packages/chat/src/assets/stylus/_chat.styl
+++ b/packages/chat/src/assets/stylus/_chat.styl
@@ -58,7 +58,6 @@ $chat-avatar-size := 40px
     display: inline-block
     clear: both
     float: left
-    margin-bottom: 16px
     max-width: 80%
 
     &:last-child
