--- a/src/assets/stylus/themes/_adamant.styl
+++ b/src/assets/stylus/themes/_adamant.styl
@@ -90,8 +90,9 @@
 
   .a-chat__message
     border-radius: 8px
+    margin-bottom: 16px
   .a-chat__body-messages
-    padding: 16px
+    padding: 16px 16px 0 16px
 
 .theme--light
   .chat
